2003-11-14  Per Bothner  <per@bothner.com>

	* kawa/standard/string_append.java:  Removed class.
	* kawa/standard/Makefile.am:  Update accordingly.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* kawa/standard/Scheme.java (LispInterpreter): Definition for
	string-append/shared; redefine string-append.

2003-11-08  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run):  Use new Interpreter.parse convention.

2003-11-05  Per Bothner  <per@bothner.com>

	* kawa/standard/define.java (rewriteForm):  Complain if not in <body>.

	* kawa/standard/define_variable.java (scanForDefinitions, rewriteForm):
	Fix various problems.
	* kawa/standard/Scheme.java (<init>):  Use define_syntax for
	'define-variable'.

2003-11-02  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run):  Replace call to old 'parse' method
	by call to 'parse' with different parameter list.
	* kawa/lang/CompileFile.java (read):  Replace 'parseFile' call
	by call to new 'parse' method.
	* kawa/lang/Eval.java (evalBody):  Inline LispInterpreter.makeModuleExp
	here, so we can get rid of it.

2003-10-30  Per Bothner  <per@bothner.com>

	* configure.in:  Add link to gnu/xquery/testsuite/auction.xml.in.

2003-10-28  Per Bothner  <per@bothner.com>

	* Make-rules (DONT_EDIT_SUBS):  Move to gnu/xml/Makefile.am.

2003-10-21  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7.90.
	* build.xml (version.release):  Set to 1.7.90.

2003-10-19  Per Bothner  <per@bothner.com>

	* kawa/lang/Eval.java (evalBody):  Need to pass Interpreter
	to new Translator.
	* kawa/lang/Translator.java (<init>):  Take Interpreter.
	Remove unused constructors.
	(resolve):  Moved to super class Compilation.

	* kawa/standard/module_compile_options.java:  New class extends Syntax.
	* kawa/standard/with_compile_options.java:  New class extends Syntax.
	* kawa/standard/Makefile.am:  Update accordingly.
	* kawa/standard/Scheme.java:  Define '"module-compile-options'
	and 'with-compile-options'.
